non-msrv-tests/tests/ui/zeroize/invalid_option.stderr
error: `Zeroize` doesn't support this option
 --> tests/ui/zeroize/invalid_option.rs:4:24
  |
4 | #[derive_where(Zeroize(test); T)]
  |                        ^^^^

error: `Zeroize` doesn't support this option
 --> tests/ui/zeroize/invalid_option.rs:8:24
  |
8 | #[derive_where(Zeroize(test = "test"); T)]
  |                        ^^^^
